# rust-mastodon

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  mastodon.rs  register.rs  types.rs
